Solve the Pickle import

--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -15,12 +15,8 @@
    },
    "outputs": [],
    "source": [
-    "# Import libraries\n",
-    "import requests\n",
-    "import pandas as pd\n",
-    "from os.path import exists\n",
-    "from bs4 import BeautifulSoup\n",
-    "from utils import load_pkl, save_pkl"
+    "# Use the data folder to look for the saved rankings\n",
+    "DATA_FOLDER = 'Data/'"
    ]
   },
   {
@@ -31,8 +27,30 @@
    },
    "outputs": [],
    "source": [
-    "# Use the data folder to look for the saved rankings\n",
-    "DATA_FOLDER = 'Data/'"
+    "# Import libraries\n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "from os.path import exists\n",
+    "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# We define nice helper functions to reduce the running time\n",
+    "import pickle\n",
+    "def save_pkl(obj, path):\n",
+    "    with open(path, 'wb') as f:\n",
+    "        pickle.dump(obj, f)\n",
+    "\n",
+    "def load_pkl(path):\n",
+    "    with open(path, 'rb') as f:\n",
+    "        return pickle.load(f)"
    ]
   },
   {
