Adding folder creation and regions to times df

--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -10,9 +10,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Use the data folder to look for the saved rankings\n",
@@ -22,15 +20,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
     "import requests\n",
     "import pandas as pd\n",
     "from os.path import exists\n",
+    "import os #we can write this better\n",
     "from bs4 import BeautifulSoup"
    ]
   },
@@ -119,9 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Transforming to Data frame\n",
@@ -131,11 +126,20 @@
     "    times_frame['nid'],\\\n",
     "    times_frame['record_type'],\\\n",
     "    times_frame['subjects_offered'],\\\n",
-    "    times_frame['rank']\n",
+    "    times_frame['stats_female_male_ratio']\n",
     "times_frame['rank_order'] = times_frame['rank_order'].map(lambda x: int(int(x)/10)) #Keeping absolute order\n",
     "\n",
     "#We display the format of the elements we retrieved to get a better visualization\n",
     "times_frame.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "times_frame.shape #getting 200 universities"
    ]
   },
   {
@@ -160,9 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "##NEED TO GET ONLY NUMERICAL VALUES FOR THE RANK DISPLAY!!\n",
@@ -195,9 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "r = requests.get(TOP_UNIVERSITIES + '/universities/university-cambridge')\n",
@@ -276,12 +276,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Takes a relatively long time (more than a minute to run)\n",
+    "#Takes a relatively long time to run the first time\n",
+    "\n",
+    "#create place to put data\n",
+    "if not os.path.exists(DATA_FOLDER):\n",
+    "    os.makedirs(DATA_FOLDER)\n",
     "\n",
     "top_file = DATA_FOLDER + 'top_ranking.pkl'\n",
     "if exists(top_file):\n",
@@ -305,12 +307,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_top.shape #geting 200 universities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "merged_top[merged_top.isnull().any(axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have undefined values, but they are due to the wbesite not containing these informations.\n",
+    "For now, we propagate the nan"
    ]
   },
   {
@@ -330,7 +347,6 @@
    "outputs": [],
    "source": [
     "top_fac_stud = merged_top\n",
-    "##change of code!!!! did not work as data contains non type. changed code:\n",
     "top_fac_stud['faculty/students'] = top_fac_stud.faculty/top_fac_stud.students\n",
     "top_fac_stud = top_fac_stud[['title', 'faculty/students', 'rank_display']]"
    ]
@@ -338,9 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_fac_stud = top_fac_stud.sort_values(['faculty/students', 'rank_display'], ascending=[False, True])\n",
@@ -358,9 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_int_stud = merged_top\n",
@@ -373,9 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_int_stud = top_int_stud.sort_values(['international/students', 'rank_display'], ascending=[False, True])\n",
@@ -393,9 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "##AS RANK DOESN'T WORK (NOT NUMERICAL VALUES ONLY ) WE USE THE SCORE\n",
@@ -406,13 +414,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Need to work on it (cf Above)\n",
-    "\n",
     "top_region = merged_top\n",
     "top_region = top_region.groupby(\"region\", as_index = False)[\"score\"].max()\n",
     "top_region = top_region.sort_values(\"score\", ascending = False)\n",
@@ -430,13 +435,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "regions_by_country = dict(zip(top_frame.country, top_frame.region))\n",
-    "regions_by_country"
+    "regions_by_country = dict(zip(top_frame.country, top_frame.region))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "times_frame['region'] = times_frame.location.map(regions_by_country)\n",
+    "times_frame[times_frame.region.isnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#both are in Europe, amd Luxembourg isn't present anyway\n",
+    "times_frame.loc[times_frame.region.isnull(), 'region'] = 'Europe' \n",
+    "times_frame[times_frame.location == 'Luxembourg'] #assignment works :D"
    ]
   }
  ],
@@ -457,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
