--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -246,11 +246,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#this is just an example! we don't use this like this\n",
     "r = requests.get(TOP_UNIVERSITIES + '/universities/university-cambridge')\n",
     "page_body = r.text\n",
     "soup = BeautifulSoup(page_body, 'html.parser')\n",
     "\n",
     "#In order to get the right numbers, we use [1:-1] in order to delete the leading and trailing spaces\n",
+    "\n",
     "student_number = (soup.find('div', class_='total student')).find('div', class_='number').text[1:-1]\n",
     "int_student = (soup.find('div', class_='total inter')).find('div', class_='number').text[1:-1]\n",
     "facult_number = (soup.find('div', class_='total faculty')).find('div', class_='number').text[1:-1]\n",
@@ -280,8 +282,7 @@
    "source": [
     "def get_additional_info(url):\n",
     "    r = requests.get(TOP_UNIVERSITIES + url)\n",
-    "    if r.status_code == 404:\n",
-    "        print('NOOO')\n",
+    "    assert r.status_code != 404, 'Bad request: could not get data'\n",
     "    page_body = r.text\n",
     "    soup = BeautifulSoup(page_body, 'html.parser')\n",
     "    \n",
@@ -310,6 +311,7 @@
     "\n",
     "\n",
     "def remove_blank_convert_float(x):\n",
+    "    \"\"\"helper function, removes blankspace and parses to float\"\"\"\n",
     "    if(x):\n",
     "        x = x.text[1:-1].replace(\",\",\"\")\n",
     "        x_float = float(x)\n",
@@ -322,7 +324,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Takes a relatively long time to run the first time\n",
@@ -385,9 +389,10 @@
    },
    "outputs": [],
    "source": [
+    "#todo: we should probably remove this line\n",
     "# We want the rank as an int, so we use replace and a regex to be able to only have int values.\n",
     "# CARTEFUL: can only run this once or you will have errors ! Because .str only works on strings and we transform to int!\n",
-    "merged_top['rank_display'] = merged_top['rank_display'].str.replace(r'\\D+', '').astype('int')"
+    "#merged_top['rank_display'] = merged_top['rank_display'].str.replace(r'\\D+', '').astype('int')"
    ]
   },
   {
@@ -521,12 +526,150 @@
     "times_frame.loc[times_frame.region.isnull(), 'region'] = 'Europe' \n",
     "times_frame[times_frame.location == 'Luxembourg'] #assignment works :D"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Merging the two rangkings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we first try to merge the two frames in a naive manner,\n",
+    "We see that there is almost no overlap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#this is a bad idea\n",
+    "merged_frame = pd.merge(times_frame, \n",
+    "                        merged_top, how='outer', right_on=['title'], left_on=['name'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So instead, we check if there is a python library to help us out. And there is! But we should probably ask if we are allowed to use this..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import difflib \n",
+    "\n",
+    "def get_match(element, other):\n",
+    "    #difflib gets the best matching elements and returns a list of possible matches in order of accuracy\n",
+    "    match = difflib.get_close_matches(element, merged_top.title)\n",
+    "    return '' if len(match) == 0 else match[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "matches = times_frame.name.map(lambda x: get_match(x, merged_top.title))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "times_frame['mergeindex'] = matches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "merged_frame = pd.merge(times_frame, \n",
+    "                        merged_top, how='outer', right_on=['title'], left_on=['mergeindex'])\n",
+    "nulls = merged_frame[merged_frame.isnull().any(axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nulls_1 = nulls[nulls['name'].isnull()]\n",
+    "nulls_2 = nulls[nulls['title'].isnull()]\n",
+    "print(nulls_2.name)\n",
+    "print(nulls_1[nulls_1['country'] == 'Germany'].title,\n",
+    "nulls_2[nulls_2['location'] == 'Germany'].name)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(nulls_1[nulls_1['country'] == 'France'].title,\n",
+    "nulls_2[nulls_2['location'] == 'France'].name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(nulls_1[nulls_1['country'] == 'Sweden']['title'],\n",
+    "nulls_2[nulls_2['location'] == 'Sweden']['name'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that the only improvement possible is combining LMU Munich and Ludwig-Maximilians-Universität München, as this is one row, we just do it manually"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#TODO: add rank? I don't think we need anything else, all other values are junk that won't be needed for question 4 and 5"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -540,7 +683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
