Correcting a few errors

--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -57,16 +57,35 @@
    },
    "outputs": [],
    "source": [
-    "# We define a few helper functions to reduce running time\n",
+    "# We define a few useful helper functions\n",
     "def save_pkl(obj, path):\n",
     "    \"\"\"Saves into a pickle file to given path.\"\"\"\n",
     "    with open(path, 'wb') as f:\n",
     "        pk.dump(obj, f)\n",
     "        \n",
+    "        \n",
     "def load_pkl(path):\n",
     "    \"\"\"Loads a pickle file from a given path.\"\"\"\n",
     "    with open(path, 'rb') as f:\n",
     "        return pk.load(f)\n",
+    "    \n",
+    "\n",
+    "def transform_rank(df, cname):\n",
+    "    \"\"\"Function that transforms the rank from a string to an int. First assert w edo have strings to not get errors.\n",
+    "    \"\"\"\n",
+    "    assert df[cname].dtype == np.object_, \"We do not have strings in \"+ cname\n",
+    "    df[cname] = df[cname].str.replace(r'\\D+', '').astype('int')\n",
+    "    \n",
+    "\n",
+    "def remove_blank_convert_float(x):\n",
+    "    \"\"\"Removes blankspace from x and parses it to float.\"\"\"\n",
+    "    if(x):\n",
+    "        x = x.text[1:-1].replace(\",\",\"\")\n",
+    "        x_float = float(x)\n",
+    "    else:\n",
+    "        #use NAN for unknown values, facilitates computation\n",
+    "        x_float = float('NAN')\n",
+    "    return x_float\n",
     "\n",
     "    \n",
     "# We have several ratios to calculate, so we will have a function that does it.\n",
@@ -78,13 +97,7 @@
     "        name is the name of the new column\n",
     "    \"\"\"\n",
     "    # Calculate ratio and put it in a new column\n",
-    "    df[name] = df[c1]/df[c2]\n",
-    "\n",
-    "def transform_rank(df, cname):\n",
-    "    \"\"\"Function that transforms the rank from a string to an int.\n",
-    "    \"\"\"\n",
-    "    # assert df[cname].dtype == ???, \"We do not have strings in \"+ cname\n",
-    "    df[cname] = df[cname].str.replace(r'\\D+', '').astype('int')"
+    "    df[name] = df[c1]/df[c2]"
    ]
   },
   {
@@ -98,18 +111,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To find the approptiate links to find the data, we did a preliminary exploration of the website's responses and code using postman and the google chrome dev tools.\n",
+    "To find the approptiate links to find the data, we did a preliminary exploration of the website's responses and code using Postman and the Google Chrome dev tools.\n",
     "\n",
     "- For the Times, going to the ranking site and looking at the JSON response immediatly led to the right data.\n",
-    "- For TopUniversities, a search on postman looking for the occurence of the string data was preformed, leading to the source of the data\n",
-    "- To find the additioal information needed in the topuniversities set, we used the google dev tools to quickly check which classes pointed to the div tags containing the required information"
+    "- For TopUniversities, a search on Postman looking for the occurence of some string data was preformed, leading to the source of the aforementioned data.\n",
+    "- To find the additioal information needed in the TopUniversities set, we used the Google dev tools to quickly check which classes pointed to the div tags containing the required information."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We first find the appropriate lists giving us the needed data"
+    "We first find the appropriate lists giving us the data we need."
    ]
   },
   {
@@ -165,6 +178,7 @@
     "    top_frame['stars'],\\\n",
     "    top_frame['guide'] \n",
     "\n",
+    "#Permits us to have a quick look at the data.\n",
     "top_frame.head()"
    ]
   },
@@ -173,15 +187,6 @@
    "metadata": {},
    "source": [
     "We also want the rank to be clean, which means not having any string values (such as for example \"=3\" as two universites are at rank 3). We use a simple regex to quickly clean our dataframes:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "top_frame['rank_display'].dtype"
    ]
   },
   {
@@ -206,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To be able to find additional elements, we need to visit every University URL. Below, we offer an example of usage (1st university of the Top Universities ranking) in order to clarify the code we will write in the next steps."
+    "To be able to find additional elements, we need to visit every University URL. Below, we offer an example of usage (1st university of the Top Universities ranking) in order to clarify the code, it will be commented."
    ]
   },
   {
@@ -238,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As asked, we need to ensure that we have the name, rank, country & region, number of faculty members (international and total) and number of students (international and total) and that they appear in the final DataFrame."
+    "As asked, we need to ensure that we have the name, rank, country, region, number of faculty members (international and total) and number of students (international and total) so that they appear in the final DataFrame."
    ]
   },
   {
@@ -276,18 +281,7 @@
     "              'international students': [remove_blank_convert_float(int_student)], \n",
     "              'faculty' : [remove_blank_convert_float(faculty_number)], \n",
     "              'international faculty' : [remove_blank_convert_float(int_faculty)] })\n",
-    "    return frame\n",
-    "\n",
-    "\n",
-    "def remove_blank_convert_float(x):\n",
-    "    \"\"\"helper function, removes blankspace and parses to float\"\"\"\n",
-    "    if(x):\n",
-    "        x = x.text[1:-1].replace(\",\",\"\")\n",
-    "        x_float = float(x)\n",
-    "    else:\n",
-    "        #use NAN for unknown values, facilitates computation\n",
-    "        x_float = float('NAN')\n",
-    "    return x_float"
+    "    return frame"
    ]
   },
   {
@@ -300,7 +294,7 @@
    "source": [
     "#Takes a relatively long time to run the first time\n",
     "\n",
-    "#create place to put data\n",
+    "#We create a place where to put all the data.\n",
     "if not osp.exists(DATA_FOLDER):\n",
     "    os.makedirs(DATA_FOLDER)\n",
     "\n",
@@ -427,7 +421,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_fac = top_fac_stud.head(10)\n",
@@ -466,7 +462,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_countries = pd.DataFrame(merged_top['country'].value_counts())\n",
@@ -499,7 +497,7 @@
     "plt.show()\n",
     "\n",
     "sns.barplot(y=\"region\", x=\"universities\", data=best_regions)\n",
-    "plt.title(\"Regionns according to number of top universities\")\n",
+    "plt.title(\"Regions according to number of top universities\")\n",
     "plt.show()"
    ]
   },
@@ -507,7 +505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Keeping code below but not using it ^^\""
+    "TODO: Keeping code below but not using it ^^\""
    ]
   },
   {
@@ -552,7 +550,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We simply repeat the same process for the second ranking (thus, we will not comment the code as above)."
+    "We simply repeat the same process as for TopUniversities for the second ranking (thus, we will not comment the code as above)."
    ]
   },
   {
@@ -643,15 +641,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Merging the two rangkings"
+    "## Merging the two rankings"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "we first try to merge the two frames in a naive manner,\n",
-    "We see that there is almost no overlap"
+    "First, we try to merge the two frames in a naive manner, but we see that there is almost no overlap"
    ]
   },
   {
