Started cleaning the notebook

--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Homework 2"
+    "# Homework 2\n",
+    "\n",
+    "We first import the needed libraries and set the elements we need for the rest of the Homework"
    ]
   },
   {
@@ -15,7 +17,7 @@
    },
    "outputs": [],
    "source": [
-    "# Use the data folder to look for the saved rankings\n",
+    "# Used to look for the saved rankings\n",
     "DATA_FOLDER = 'Data/'"
    ]
   },
@@ -27,26 +29,15 @@
    },
    "outputs": [],
    "source": [
-    "# Import libraries\n",
+    "# Importing libraries\n",
     "import requests\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
     "import pickle as pk\n",
-    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
     "import seaborn as sns\n",
     "import os, os.path as osp\n",
     "from bs4 import BeautifulSoup\n",
-    "\n",
-    "sns.set_context(\"notebook\")\n",
-    "sns.set(style=\"whitegrid\")\n",
-    "sns.set_palette(\"hls\", 10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Useful functions"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -57,7 +48,29 @@
    },
    "outputs": [],
    "source": [
-    "# We define a few useful helper functions\n",
+    "sns.set_context(\"notebook\")\n",
+    "sns.set(style=\"whitegrid\")\n",
+    "sns.set_palette(\"hls\", 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Useful functions\n",
+    "\n",
+    "The following functions are helper functions allowing us to have a cleaner code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Functions allowing us to manipulate Pickle files (better running time)\n",
     "def save_pkl(obj, path):\n",
     "    \"\"\"Saves into a pickle file to given path.\"\"\"\n",
     "    with open(path, 'wb') as f:\n",
@@ -67,36 +80,52 @@
     "def load_pkl(path):\n",
     "    \"\"\"Loads a pickle file from a given path.\"\"\"\n",
     "    with open(path, 'rb') as f:\n",
-    "        return pk.load(f)\n",
-    "    \n",
-    "\n",
+    "        return pk.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Functions allowing us to clean our data\n",
     "def transform_rank(df, cname):\n",
-    "    \"\"\"Function that transforms the rank from a string to an int. First assert w edo have strings to not get errors.\n",
-    "    \"\"\"\n",
-    "    assert df[cname].dtype == np.object_, \"We do not have strings in \"+ cname\n",
+    "    \"\"\"Function that transforms the rank from a string to an int. \n",
+    "    The assert is needed to ensure that we have strings (else the code produces errors).\"\"\"\n",
+    "    assert df[cname].dtype == np.object_, \"We do not have strings in \" + cname\n",
     "    df[cname] = df[cname].str.replace(r'\\D+', '').astype('int')\n",
     "    \n",
-    "\n",
     "def remove_blank_convert_float(x):\n",
     "    \"\"\"Removes blankspace from x and parses it to float.\"\"\"\n",
     "    if(x):\n",
     "        x = x.text[1:-1].replace(\",\",\"\")\n",
     "        x_float = float(x)\n",
     "    else:\n",
-    "        #use NAN for unknown values, facilitates computation\n",
+    "        #Using NAN for unknown values to facilitate computation\n",
     "        x_float = float('NAN')\n",
-    "    return x_float\n",
-    "\n",
-    "    \n",
-    "# We have several ratios to calculate, so we will have a function that does it.\n",
+    "    return x_float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#As we need to compute several ratios, we decided to modularize this operation\n",
     "def ratios_calc(df, c1, c2, name):\n",
-    "    \"\"\"Function that calculates ratios of given panda dataframe.\n",
-    "        df is the dataframe\n",
+    "    \"\"\"Function that computes ratios for a given DataFrame.\n",
+    "        df is the DataFrame\n",
     "        c1 is the name of the first column for the ratio,\n",
     "        c2 is the name of the second column for the ratio,\n",
     "        name is the name of the new column\n",
     "    \"\"\"\n",
-    "    # Calculate ratio and put it in a new column\n",
+    "    # Computes the ratio and puts it in a new column\n",
     "    df[name] = df[c1]/df[c2]"
    ]
   },
@@ -104,25 +133,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Simple Data Retrieval"
+    "## Preparatory steps"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To find the approptiate links to find the data, we did a preliminary exploration of the website's responses and code using Postman and the Google Chrome dev tools.\n",
+    "The first step was a preliminary exploration of the website's responses and code using Postman and the Google Chrome dev tools.\n",
     "\n",
-    "- For the Times, going to the ranking site and looking at the JSON response immediatly led to the right data.\n",
-    "- For TopUniversities, a search on Postman looking for the occurence of some string data was preformed, leading to the source of the aforementioned data.\n",
-    "- To find the additioal information needed in the TopUniversities set, we used the Google dev tools to quickly check which classes pointed to the div tags containing the required information."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We first find the appropriate lists giving us the data we need."
+    "- For the Times, looking at the JSON response from the ranking website immediately led to the right data.\n",
+    "- For TopUniversities, we searched for the occurence of some string data on Postman, leading to the source of the data.\n",
+    "- To find the additional information needed in the TopUniversities set, we used the Google dev tools to quickly check which classes pointed to the div tags containing the required information."
    ]
   },
   {
@@ -134,20 +156,28 @@
    "outputs": [],
    "source": [
     "#Base URL for websites to crawl\n",
-    "TIMES_EDUCATION = 'https://www.timeshighereducation.com'\n",
-    "TOP_UNIVERSITIES = 'https://www.topuniversities.com'\n",
     "FILES = '/sites/default/files/'\n",
+    "TOP_UNIVERSITIES = 'https://www.topuniversities.com'\n",
+    "TIMES_EDUCATION = 'https://www.timeshighereducation.com'\n",
     "\n",
     "#These are the main URLs we will be working with\n",
-    "TIMES_EDUCATION_JSON = TIMES_EDUCATION + FILES + 'the_data_rankings/world_university_rankings_2018_limit0_369a9045a203e176392b9fb8f8c1cb2a.json'\n",
-    "TOP_UNIVERVERSITIES_TEXT = TOP_UNIVERSITIES + FILES + 'qs-rankings-data/357051.txt'"
+    "TOP_UNIVERVERSITIES_TEXT = TOP_UNIVERSITIES + FILES + 'qs-rankings-data/357051.txt'\n",
+    "TIMES_EDUCATION_JSON = TIMES_EDUCATION + FILES + 'the_data_rankings/world_university_rankings_2018_limit0_369a9045a203e176392b9fb8f8c1cb2a.json'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this part, we request the JSON of the first ranking and preprocess the data (the steps are detailed in the code)."
+    "## Exercise 1 : TopUniversities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data retrieval\n",
+    "The first step is pretty step forward. We simply request the JSON and create a DataFrame containing all the needed information offered by the request."
    ]
   },
   {
@@ -166,7 +196,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -178,15 +208,8 @@
     "    top_frame['stars'],\\\n",
     "    top_frame['guide'] \n",
     "\n",
-    "#Permits us to have a quick look at the data.\n",
+    "#Allows us to have a quick look at the data.\n",
     "top_frame.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We also want the rank to be clean, which means not having any string values (such as for example \"=3\" as two universites are at rank 3). We use a simple regex to quickly clean our dataframes:"
    ]
   },
   {
@@ -197,6 +220,7 @@
    },
    "outputs": [],
    "source": [
+    "#This step allows us to clean the (relative) rank for comparison and add an (absolute) rank for display\n",
     "transform_rank(top_frame,'rank_display')"
    ]
   },
@@ -204,29 +228,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Web Scraping - TopUniversities"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To be able to find additional elements, we need to visit every University URL. Below, we offer an example of usage (1st university of the Top Universities ranking) in order to clarify the code, it will be commented."
+    "The second step is a little more complicated, which is why we decided to include an example of how additional data should be retrieved in order to better understand our methodology."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "#this is just an example! we don't use this like this\n",
     "r = requests.get(TOP_UNIVERSITIES + '/universities/university-cambridge')\n",
     "page_body = r.text\n",
     "soup = BeautifulSoup(page_body, 'html.parser')\n",
     "\n",
     "#In order to get the right numbers, we use [1:-1] in order to delete the leading and trailing spaces\n",
-    "\n",
     "student_number = (soup.find('div', class_='total student')).find('div', class_='number').text[1:-1]\n",
     "int_student = (soup.find('div', class_='total inter')).find('div', class_='number').text[1:-1]\n",
     "facult_number = (soup.find('div', class_='total faculty')).find('div', class_='number').text[1:-1]\n",
@@ -243,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As asked, we need to ensure that we have the name, rank, country, region, number of faculty members (international and total) and number of students (international and total) so that they appear in the final DataFrame."
+    "The following function allows us to get all the useful information. As asked, we make sure that we have the name, rank, country, region, number of faculty members (international and total) and number of students (international and total) in the final DataFrame."
    ]
   },
   {
@@ -294,10 +311,11 @@
    "source": [
     "#Takes a relatively long time to run the first time\n",
     "\n",
-    "#We create a place where to put all the data.\n",
+    "#We create a folder to store all the data.\n",
     "if not osp.exists(DATA_FOLDER):\n",
     "    os.makedirs(DATA_FOLDER)\n",
     "\n",
+    "#We create a file to store the TopUniversities Ranking\n",
     "top_file = DATA_FOLDER + 'top_ranking.pkl'\n",
     "if osp.exists(top_file):\n",
     "    merged_top = load_pkl(top_file)\n",
@@ -314,13 +332,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Exercise 2 : Times Higher Education"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We now check if we have any undefined values in the set and see that we do."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "merged_top.shape #geting 200 universities"
@@ -329,7 +356,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "merged_top[merged_top.isnull().any(axis=1)]"
@@ -373,7 +402,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top_fac_stud = top_fac_stud.sort_values(['faculty/students', 'rank_display'], ascending=[False, True])\n",
@@ -391,7 +422,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top_int_stud = merged_top\n",
@@ -403,7 +436,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top_int_stud = top_int_stud.sort_values(['international/students', 'rank_display'], ascending=[False, True])\n",
@@ -433,7 +468,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sns.barplot(y=\"title\", x=\"faculty/students\", hue=\"rank_display\", data=best_fac)\n",
@@ -487,7 +524,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_countries = best_countries.head(10) #they are already ordered.\n",
@@ -518,7 +557,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top_country = merged_top.sort_values(['country', 'rank_display'], ascending=[True,False])\n",
@@ -528,7 +569,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Need to work on it (cf Above)\n",
@@ -569,7 +612,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Transforming to Data frame\n",
@@ -619,7 +664,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "times_frame['region'] = times_frame.location.map(regions_by_country)\n",
@@ -629,7 +676,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#both are in Europe, amd Luxembourg isn't present anyway\n",
@@ -726,7 +775,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nulls_1 = nulls[nulls['name'].isnull()]\n",
@@ -739,7 +790,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(nulls_1[nulls_1['country'] == 'France'].title,\n",
@@ -749,7 +802,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(nulls_1[nulls_1['country'] == 'Sweden']['title'],\n",
@@ -778,7 +833,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -792,7 +847,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
